2003-06-30  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_exec.c (bk_pipe_to_exec): using BK_GWD for /dev/null path is
	far more likely to be used by hacker to redirect to /etc/passwd than
	to ever be needed by a sysadmin who is not totally psychotic
	
2003-06-27  Seth Robertson  <seth@startide.sysdetect.com>

	* src/bk_daemon.c: Add old daemonizing program to starting libbk
	install.  It is not bakaized per se, but it certainly works!

2003-06-25  James Tanis  <jtt@austin.sysdetect.com>

	* include/libbk_inline.h: Reorder inline functions so they inline.

	* lib/b_ioh.c: Convert bid queue from a nomal dll to bk_dll.
	Convert biq_iterate/nextobj to biq_minimum/successor. See comments
	in libbk_inline.h for explanation as to why this won't potentially
	slow things down.
	(ioh_dequeue_byte): Don't attempt to follow the "next" pointer of
	a freed object.

	* include/libbk_inline.h: Add more of the missing bk_dll functions.

2003-06-24  James Tanis  <jtt@hawking.sysdetect.com>

	* lib/b_string.c: Convert registry to use array as DS, no dll. Why
	didn't I think of this before?

2003-06-20  James Tanis  <jtt@austin.sysdetect.com>

	* lib/b_pollio.c (polling_io_ioh_handler): Avoid calling
	bk_ioh_coalesce() if there's only one buffer handed up -- and
	seize it as well.

2003-06-20  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_general.c (bk_general_destroy): don't free general data until
	after thread data is destroyed
	(bk_general_thread_destroy): use pthread_self() as well as getpid()
	for funstats file format

2003-06-20  James Tanis  <jtt@wonder.sysdetect.com>

	* lib/b_pollio.c (polling_io_ioh_handler): Seize the data if it's
	allowed by the ioh.

	* lib/b_ioh.c: Do not free data if it has been seized by user.

2003-06-17  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_thread.c (bk_threadnode_destroy): Actually start
	destroying subsidiary B thread environment.

	* lib/b_stats.c: Allow for no-locking if requested
